--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2702,7 +2702,7 @@ input, select, textarea {
 		  margin: 3px
 		}
 		.tag {background-color: #e7e7e7; border-radius: 2px}
-		.deployed {background-color: #4cbb17; color: #787878; border-radius: 2px}
+		.deployed {background-color: #32cd32; color: #595959; border-radius: 2px}
 		.column {
 		  float: left;
 		  width: 25%;
