--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2702,7 +2702,8 @@ input, select, textarea {
 		  margin: 3px
 		}
 		.tag {background-color: #e7e7e7; border-radius: 2px}
-		.deployed {background-color: #32cd32; color: #595959; border-radius: 2px}
+		.deployed {background-color: #0fff50; color: #4f4f4f; border-radius: 2px}
+		.notebook {background-color: #d91818; color: #4f4f4f; border-radius: 2px}
 		.column {
 		  float: left;
 		  width: 25%;
