--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2695,7 +2695,7 @@ input, select, textarea {
 
 /* Tags */
 	.label {
-		  color: #a2a2a2;
+		  color: #575757;
 		  padding: 5px;
 		  font-family: "Source Sans Pro";
 		  font-size: 75%;
