--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -242,158 +242,35 @@ input, select, textarea {
 	}
 
 /* Navbar */
-	.navbar-custom {
-	  background-color: {{ site.navbar-col }};
-	  border-bottom: 1px solid #EAEAEA;
-	  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	  {% if site.navbar-img %}
-	  background-image: url({{ site.navbar-img | relative_url }});
-	  background-attachment: fixed;
-	  {% endif %}
-	}
+.topnav {
+  background-color: #474747;
+  overflow: hidden;
+  background-attachment: scroll, scroll;
+  background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+}
 
-	.navbar-custom .nav li a {
-	  text-transform: uppercase;
-	  font-size: 12px;
-	  letter-spacing: 1px;
-	}
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-	.navbar-custom .navbar-brand,
-	.navbar-custom .nav li a {
-	  font-weight: 800;
-	  color: {{ site.navbar-text-col }};
-	}
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-	.navbar-custom .navbar-brand:hover,
-	.navbar-custom .navbar-brand:focus ,
-	.navbar-custom .nav li a:hover,
-	.navbar-custom .nav li a:focus {
-	  color: {{ site.hover-col }};
-	}
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #49bf9d;
+  color: white;
+}
 
-	.navbar-custom .navbar-brand-logo {
-	  padding-top: 0;
-	  -webkit-transition: padding .5s ease-in-out;
-	  -moz-transition: padding .5s ease-in-out;
-	  transition: padding .5s ease-in-out;
-	}
-	.navbar-custom .navbar-brand-logo img {
-	  height: 50px;
-	  -webkit-transition: height .5s ease-in-out;
-	  -moz-transition: height .5s ease-in-out;
-	  transition: height .5s ease-in-out;
-	}
-	.navbar-custom.top-nav-short .navbar-brand-logo {
-	  padding-top: 5px;
-	}
-	.navbar-custom.top-nav-short .navbar-brand-logo img {
-	  height: 40px;
-	}
-
-	@media only screen and (min-width: 768px) {
-	  .navbar-custom {
-	    padding: 20px 0;
-	    -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-	    -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-	    transition: background .5s ease-in-out,padding .5s ease-in-out;
-	  }
-
-	  .navbar-custom.top-nav-short {
-	    padding: 0;
-	  }
-	}
-
-	.navbar-custom .avatar-container {
-	  position: absolute;
-	  left: 50%;
-	  width: 50px;
-	  margin-top: -25px;
-	}
-	.navbar-custom .avatar-container .avatar-img-border {
-	  width: 100%;
-	  border-radius: 50%;
-	  margin-left: -50%;
-	  display: inline-block;
-	  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-	  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .8);
-	  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-	}
-	.navbar-custom .avatar-container .avatar-img {
-	  width: 100%;
-	  border-radius: 50%;
-	  display: block;
-	}
-
-	.navbar-custom.top-nav-expanded .avatar-container {
-	  display: none;
-	}
-
-	@media only screen and (min-width: 768px) {
-	  .navbar-custom .avatar-container {
-	    width: 100px;
-	    margin-top: -50px;
-	  }
-
-	  .navbar-custom .avatar-container .avatar-img-border {
-	    width: 100%;
-	    box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
-	    -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
-	    -moz-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
-	  }
-
-	  .navbar-custom .avatar-container .avatar-img {
-	    width: 100%;
-	  }
-	}
-
-	/* Multi-level navigation links */
-	.navbar-custom .nav .navlinks-container {
-	  position: relative;
-	}
-	.navbar-custom .nav .navlinks-parent:after {
-	  content: " \25BC";
-	}
-	.navbar-custom .nav .navlinks-children {
-	  width: 100%;
-	  display: none;
-	  word-break: break-word;
-	}
-	.navbar-custom .nav .navlinks-container .navlinks-children a {
-	  display: block;
-	  padding: 10px;
-	  padding-left: 30px;
-	  background-color: {{ site.navbar-children-col }};
-	  text-decoration: none !important;
-	  border-width: 0 1px 1px 1px;
-	  font-weight: normal;
-	}
-	@media only screen and (max-width: 767px) {
-	  .navbar-custom .nav .navlinks-container.show-children {
-	    background: rgba(0, 0, 0, 0.2);
-	  }
-	  .navbar-custom .nav .navlinks-container.show-children .navlinks-children {
-	    display: block;
-	  }
-	}
-	@media only screen and (min-width: 768px) {
-	  .navbar-custom .nav .navlinks-container {
-	    text-align: center;
-	  }
-	  .navbar-custom .nav .navlinks-container:hover {
-	    background: rgba(0, 0, 0, 0.1);
-	  }
-	  .navbar-custom .nav .navlinks-container:hover .navlinks-children {
-	    display: block;
-	  }
-	  .navbar-custom .nav .navlinks-children {
-	    position: absolute;
-	  }
-	  .navbar-custom .nav .navlinks-container .navlinks-children a {
-	    padding-left: 10px;
-	    border: 1px solid #eaeaea;
-	    border-width: 0 1px 1px;
-	  }
-	}
 /* Container */
 
 	.container {
@@ -1926,13 +1803,13 @@ input, select, textarea {
 	header h2 + p {
 		font-size: 1.25em;
 		margin-top: -1em;
-		line-height: 1.5em;
+
 	}
 
 	header h3 + p {
 		font-size: 1.1em;
 		margin-top: -0.8em;
-		line-height: 1.5em;
+
 	}
 
 	header h4 + p,
@@ -1940,7 +1817,7 @@ input, select, textarea {
 	header h6 + p {
 		font-size: 0.9em;
 		margin-top: -0.6em;
-		line-height: 1.5em;
+
 	}
 
 	header.major h2 {
@@ -3212,14 +3089,14 @@ input, select, textarea {
 	#main {
 		margin-left: 35%;
 		max-width: 54em;
-		padding: 8em 4em 4em 4em;
+		padding: 4em 0em 4em 4em;
 		width: calc(100% - 35%);
 	}
 
 		#main > section {
 			border-top: solid 2px #efefef;
-			margin: 4em 0 0 0;
-			padding: 4em 0 0 0;
+			margin: 0 0 0 0;
+			padding: 2em 0 0 0;
 		}
 
 			#main > section:first-child {
